--- a/src/components/HeaderComponent/style.css
+++ b/src/components/HeaderComponent/style.css
@@ -1,3 +1,38 @@
-a {
+/* a {
     color: #4e6f7a;
+} */
+.ContentPopup {
+    margin: 5px 0px;
+}
+
+.ant-popover-content .ant-popover-inner {
+    padding: 10px;
+    border-radius: 0px;
+    margin-top: 3px;
+}
+
+.ant-dropdown .ant-dropdown-menu{
+    border-radius: 0px;
+    margin-top: 12px;
+    background-color: #F4F2EC;
+}
+
+.logo {
+    margin-left: 180px;
+}
+.category {
+    margin-left: 30px;
+}
+.sort {
+    margin-left: 30px;
+}
+
+.post-story {
+    margin-left: 30px;
+}
+.search {
+    margin-left: 30px;
+}
+.login-register {
+    margin-left: 30px;
 }
