--- a/src/pages/PostStoryPage/style.css
+++ b/src/pages/PostStoryPage/style.css
@@ -1,8 +1,8 @@
-/* .sc-irLvIq .ant-input {
+.sc-irLvIq .ant-input {
     margin-top: 5px;
     margin-bottom: 10px;
 }
 
 .page-post {
     display: flex;
-} */
+}
