--- a/src/components/FooterComponent/style.css
+++ b/src/components/FooterComponent/style.css
@@ -1,5 +1,88 @@
-.footer {
+.main-footer {
     width: 100%;
-    height: 50px; /* Độ cao của footer */
-    background-color: #0E3746; /* Màu nền của footer */
+    height: 250px; /* Độ cao của footer */
+    background-color: #0E3746;
 }
+
+.container {
+    margin: 0px 200px;
+    padding-top: 10px;
+    display: flex;
+}
+
+.container > p {
+    color: rgba(255, 255, 255, .7);
+    width: 400px;
+    font-size: 14px;
+    margin-top: 28px;
+}
+
+.container > ul > li {
+    color: rgba(255, 255, 255, .7);
+    margin-left: 50px;
+    list-style-type: none;
+    margin-top: 10px;
+}
+
+.container > ul > li:first-child {
+    color: rgba(255, 255, 255);
+    margin-left: 50px;
+    list-style-type: none;
+    margin-top: 10px;
+}
+
+.container > ul > li:hover {
+    cursor: pointer;
+}
+
+
+@media only screen and (max-width:  23.375em) {
+
+    .container {
+        display: flex;
+        justify-content: center;
+    }
+
+    .container > p {
+        color: rgba(255, 255, 255, .7);
+        width: 200px;
+        margin: 0px;
+    }
+
+    .container > ul {
+        display: none;
+    }
+    
+}
+
+@media only screen and (max-width: 46.1875em) {
+
+    .container {
+        margin: 0px 10px;
+        padding-top: 10px;
+        display: flex;
+    }
+
+    .container > p {
+        color: rgba(255, 255, 255, .7);
+        width: 100px;
+        font-size: 12px;
+        margin: 0px;
+    }
+
+    .container > ul > li {
+        color: rgba(255, 255, 255, .7);
+        margin-left: 50px;
+        list-style-type: none;
+        margin-top: 10px;
+        font-size: 12px;
+    }
+    
+    .container > ul > li:first-child {
+        color: rgba(255, 255, 255);
+        margin-left: 50px;
+        list-style-type: none;
+        margin-top: 0px;
+    }
+}
+
