--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,7 +22,12 @@
 .header-menu li:nth-child(3) {
     position: relative;
     padding: 18px;
-    background-color: red;
+    background-color: rgb(226, 42, 42);
+    cursor: pointer;
+}
+
+.header-menu li:nth-child(3):hover {
+    background-color: rgb(226, 78, 78);
 }
 
 .header-logo p {
@@ -34,14 +39,17 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    cursor: pointer;
 }
 
 .list-header {
+    display: none;
 }
 
 .list {
     display: none;
 }
+
 
 @media(max-width: 1280px) {
     .header {
@@ -56,6 +64,7 @@
 }
 
 @media(max-width: 500px) {
+
     .header {
 
     }
