--- a/src/components/FooterComponent/style.css
+++ b/src/components/FooterComponent/style.css
@@ -1,106 +1,81 @@
 .main-footer {
+    box-sizing: border-box;
     width: 100%;
-    height: 250px; /* Độ cao của footer */
+    height: 260px;
     background-color: #0E3746;
-}
-
-.container {
-    margin: 0px 200px;
-    padding-top: 10px;
     display: flex;
+    color: rgb(231, 231, 231);
+    padding: 0px 205px;
+    justify-content: space-evenly;
 }
 
-.container > p {
-    color: rgba(255, 255, 255, .7);
-    width: 400px;
-    font-size: 14px;
-    margin-top: 28px;
+.main-footer p{
+    max-width: 435px;
+    font-family: "roboto", sans-serif;
 }
 
-.container > ul > li {
-    color: rgba(255, 255, 255, .7);
-    margin-left: 50px;
-    list-style-type: none;
-    margin-top: 10px;
+.main-footer ul{
+    list-style: none;
 }
 
-.container > ul > li:first-child {
-    color: rgba(255, 255, 255);
-    margin-left: 50px;
-    list-style-type: none;
-    margin-top: 10px;
-}
-
-.container > ul > li:hover {
+.main-footer ul li{
     cursor: pointer;
+    line-height: 35px;
 }
 
-
-@media only screen and (max-width:  23.375em) {
-
-    .container {
-        display: flex;
-        justify-content: center;
-    }
-
-    .container > p {
-        color: rgba(255, 255, 255, .7);
-        width: 200px;
-        margin: 0px;
-    }
-
-    .container > ul {
-        display: none;
-    }
-    
+.main-footer ul li:first-child{
+    font-size: 18px;
+    font-weight: 500;
 }
 
-@media only screen and (max-width: 46.1875em) {
-
-    .container {
-        margin: 0px 10px;
-        padding-top: 10px;
-        display: flex;
-    }
-
-    .container > p {
-        color: rgba(255, 255, 255, .7);
-        width: 100px;
-        font-size: 12px;
-        margin: 0px;
-    }
-
-    .container > ul > li {
-        color: rgba(255, 255, 255, .7);
-        margin-left: 50px;
-        list-style-type: none;
-        margin-top: 10px;
-        font-size: 12px;
-    }
-    
-    .container > ul > li:first-child {
-        color: rgba(255, 255, 255);
-        margin-left: 50px;
-        list-style-type: none;
-        margin-top: 0px;
-    }
-}
-
-@media(max-width:500px) {
+@media(max-width: 1280px) {
     .main-footer {
-        height: 10vh; /* Độ cao của footer */
+        padding: 0px 70px;
     }
-    .container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    .main-footer ul li:first-child{
+        font-size: 16px;
     }
-    .container p {
-        width: 90%;
-    }
-    ul {
-        display: none;
+    .main-footer ul li{
+        font-size: 14px;
     }
 }
 
+@media(max-width: 1024px) {
+    .main-footer {
+        height: auto;
+        padding: 0px 40px;
+    }
+    .ul-footer {
+        display: none;
+    }
+    .main-footer p {
+        max-width: 100%;
+    }
+}
+
+@media(max-width: 800px) {
+    .main-footer {
+        padding: 0px 10px;
+    }
+}
+
+@media(max-width: 600px) {
+    .main-footer p{
+        font-size: 14px;
+    }
+}
+
+
+
+/* @media(max-width: 480px) {
+    .main-footer {
+        width: 100%;
+    }
+}
+
+
+@media(max-width: 380px) {
+    .main-footer {
+        width: 100%;
+    }
+} */
